# agentic-fleet

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .goreleaser.yaml  .mcp.json  .pre-commit-config.yaml  AGENTS.md  API.md  AgenticFleet.code-workspace  BRANCH_STRATEGY_COMMANDS.sh  CHAINLIT_README.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_FRONTEND.md  CODE_REVIEW_REPORT.md  CODE_REVIEW_SUMMARY.md  COMMIT_SUMMARY.md  CONTRIBUTING.md  COPILOT_SUGGESTIONS_APPLIED.md  DOCKER.md  Dockerfile  FAST_PATH_IMPLEMENTATION.md  FINAL_SUMMARY.md  FIXES-APPLIED.md  FIXES_COMPLETE.md  FRONTEND_IMPLEMENTATION_GUIDE.md  FRONTEND_IMPROVEMENTS_SUMMARY.md  GEMINI.md  HITL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.txt  IMPLEMENTATION_WEEK1.md  IMPLEMENTATION_WEEK2.md  IMPLEMENTATION_WEEK4.md  LICENSE  LITELLM_IMPLEMENTATION_SUMMARY.md  MERGE_COMMANDS.md  (+80 more)
.chainlit/: config.toml
.claude/: mcp.json  python-backend-reviewer.skill
.claude/agents/: frontend-developer.md  python-pro.md
.claude/skills/: fleet-agent.skill  init.md  learn.md  recall.md  reflect.md
.codex/: config.toml
.cursor/: mcp.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
.fleet/: AgenticFleet_Synthesis.md  technical.md
.fleet/context/: .gitignore  MEMORY.md
.githooks/: pre-commit
.github/: OPTIMIZATION_PLAN.md  README.md  WORKFLOWS_IMPLEMENTATION.md  codecov.yml  copilot-instructions-new.md  copilot-instructions.md  copilot-instructions.md.backup  dependabot.yml  labeler.yml  labels.yml  mcp.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/agents/: agent-framework-spec.md  create-agentic-workflow.agent.md  create-shared-agentic-workflow.agent.md  debug-agentic-workflow.agent.md  docs-agent.md  expert-react-frontend-engineer.agent.md  my-agent.md  research-copilot.md
.github/aw/: actions-lock.json  github-agentic-workflows.md
.github/instructions/: memory-bank.instructions.md
.github/workflows/: api-ci.yml  ci-doctor.lock.yml  ci-doctor.md  ci.yml  codecov.yml  codeql.yml  codex-autofix.yml  copilot-feedback.yml  datadog-static-analysis.yml  dependency-review.yml  docker-build.yml  docker-image.yml  docker-publish.yml  docker.yml  docs-sync.aw.lock.yml  docs-sync.aw.md  droid-review.yml  q.md  (+14 more)
agentic_fleet/: EDITABLE_INSTALL_WARNING.txt  utils.py
agents/: __init__.py
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
config/: README.md  __init__.py  llm_config.yaml  settings.py  workflows.yaml
context_provider/: mem0_context_provider.py
data/: supervisor_examples.json
docker/: README.md  base.Dockerfile  dev.Dockerfile  docker-compose.tracing.yml  prod.Dockerfile
docs/: AGENTS.md  AUTOMATED_FEEDBACK_GUIDE.md  BACKEND_ROBUSTNESS_PLAN.md  CODE_OF_CONDUCT.md  CODE_REVIEW_GUIDELINES.md  CODE_REVIEW_SUMMARY.md  Codebase_Documentation.md  DUPLICATE_LOGIC_REPORT.md  Documentation.md  FAST_PATH_IMPLEMENTATION.md  GEMINI.md  GITHUB_ACTIONS_SETUP.md  INDEX.md  PERFORMANCE_OPTIMIZATION.md  PLANS.md  PROFILING_GUIDE.md  PULL_REQUEST_DESCRIPTION.md  PYPI_SETUP_CHECKLIST.md  Project_Architecture_Blueprint.md  QUICK-REFERENCE.md  README.md  RELEASE_0.5.0.md  STRUCTURED_MESSAGE_UI.md  TESTING_SUMMARY.md  WORKFLOWS_QUICK_REFERENCE.md  WORKFLOW_FIX_WALKTHROUGH.md  agent-framework.md  api-reference.md  api_reference.md  architecture.md  cleanup_plan.md  cli_commands.md  configuration-guide.md  configuration.md  consolidation_analysis_report.md  contributing.md  dspy-conventions.md  dspy-refactor-phase1.md  dspy-refactor-phase2.md  examples.md  (+16 more)
examples/: demo_hitl.py  dspy_agent_framework_demo.py  litellm_example.py  simple_workflow.py  test_reflection_api.py  workflow_as_agent_example.py
notebooks/: agent_as_workflow.ipynb  azure-container-code-executor.ipynb  azure_responses_client.ipynb  devui.ipynb  devui_azureai.ipynb  example.ipynb  gepa_optimization_demo.ipynb  magentic.ipynb  magentic_fleet.ipynb  mem0_basic.ipynb  models.ipynb  openai_responses_example.ipynb  program_of_thought_tutorial.ipynb  rl_pzpillon.ipynb  streaming-output.md  yaml_workflow.ipynb
public/: custom_renderer.js
report/: jscpd-report.json
scripts/: agenticfleet  agenticfleet.py  benchmark_api.py  create_db_tables.py  debug_start.py  demo_checkpointing.py  diagnostic_server.py  docker-build.sh  docker-entrypoint.sh  evaluate_history.py  evaluate_routing.py  generate_openapi.py  loop_fix_until_all_tests_pass.sh  loop_until_all_tests_pass.sh  merge_supervisor_examples.py  optimize_reasoner.py  provision_cosmos.py  publish.sh  run.py  run.sh  run_backend.sh  run_direct.py  run_frontend.sh  run_query_test.py  setup_chainlit.sh  start_backend.sh  start_server.py  start_server.sh  start_server_sync.py  start_tracing.sh  stop_tracing.sh  test-api-endpoints.py  test-playwright-mcp.sh  test_backend_quick.py  test_gpt5mini_reasoning.py  validate_litellm_models.sh  verify_backend.sh
specs/: deployment_guide.md  implementation_status.md  testing_specification.md
src/: AGENTS.md  README.md
tests/: AGENTS.md  README.md  TESTING_GUIDE.md  conftest.py  debug_import.py  run_tests.py  test_agent_lifecycle.py  test_agent_team_integration.py  test_api.py  test_api_health.py  test_api_responses.py  test_api_responses_streaming.py  test_api_sse.py  test_app.py  test_application_manager.py  test_automation.py  test_backend_e2e.py  test_chainlit_app.py  test_chat_schema_and_workflow.py  test_checkpointing.py  test_checkpoints.py  test_cli_ui.py  test_client_factory.py  test_client_factory_extended.py  test_config.py  test_config_manager.py  test_configuration.py  test_conversation_memory.py  test_dynamic_workflow.py  test_enhancements.py  test_entity_discovery_service.py  test_error_handling.py  test_event_bridge.py  test_event_translator.py  test_fast_path_classifier.py  test_fast_path_integration.py  test_fast_path_workflow.py  test_framework_health.py  test_haxui_api.py  test_hitl.py  (+29 more)
tools/: README.md
var/: test_tracing_setup.py
workflows/: __init__.py  magentic_workflow.py
(+1433 files in other folders)
