[project]
name = "agentic-fleet"
version = "0.6.2"
description = "Multi-agent orchestration system built with Microsoft Agent Framework's Magentic Fleet pattern"
authors = [{ name = "Qredence", email = "contact@qredence.ai" }]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["agents", "ai", "magentic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]

dependencies = [
    "azure-ai-agents>=1.2.0b5,<2.0",
    "azure-identity>=1.25.1,<2.0",
    "azure-cosmos>=4.8.0,<5.0",
    "python-dotenv>=1.2.1,<2.0",
    "pyyaml>=6.0.3,<7.0",
    "requests>=2.28.0",
    "pydantic>=2.12.3,<3.0",
    "tiktoken>=0.12.0,<1.0",
    "agent-framework-core",
    "agent-framework-a2a",
    "agent-framework-azure-ai",
    "agent-framework-mem0",
    "agent-framework-devui",
    "mem0ai==1.0.0",                            # Pinned for stable memory API
    "rich>=14.2.0",
    "prompt-toolkit>=3.0.47,<4.0",
    "ipykernel>=7.0.1,<8.0",
    "openai>=2.5.1",                            # Updated from requirements.txt
    "azure-ai-evaluation>=1.12.0,<2.0",
    "fastapi>=0.120.1,<1.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.24.0",
    "sse-starlette>=2.0.0",
    "databases[asyncpg]>=0.7.0,<1.0",
    "aiofiles>=25.1.0,<26.0",
    "pydantic-settings>=2.3.2,<3.0",
    "websockets>=10.4",
    "typer>=0.20.0,<0.21.0",
    "textual>=6.5.0",                           # Added from requirements.txt for TUI
    "locust>=2.15.0",
    "aiohttp>=3.9.0",
    "aiosqlite>=0.20.0",
    "prometheus-client>=0.16.0",
    "psutil>=5.9.0",
    "statsd>=3.3.0",
    "pandas>=1.5.0",
    "numpy>=1.24.0",
    "scipy>=1.9.0",
    "click>=8.1.0",
    "aiomqtt>=1.0.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.11.0",
    "plotly>=5.10.0",
    "pytest>=9.0.1,<10.0",
    "pytest-asyncio>=0.21.0",                   # Updated from requirements.txt
    "pytest-cov>=4.1.0",                        # Updated from requirements.txt
    "ruff>=0.0.200",
    "mypy>=1.8.0",                              # Updated from requirements.txt
    "flake8>=7.0.0",                            # Added from requirements.txt
    "pytz>=2024.1",
    "setuptools>=80.9.0",
    "dspy>=3.0.3",                              # Updated from requirements.txt (was pinned to 3.0.4)
    "tavily-python>=0.7.12",                    # Added version constraint from requirements.txt
    "dill>=0.3.8",
    "playwright>=1.40.0",
    "mcp>=1.21.0",
    "mlflow>=3.6.0",
    "gepa[dspy]>=0.0.17,<1.0",
    "anyio>=4.11.0,<5.0",
    "asyncer>=0.0.8,<1.0",
    "sqlalchemy>=2.0.44",
    "tenacity>=8.2.3",
    "prometheus-fastapi-instrumentator>=6.1.0",
    "python-json-logger>=2.0.7",
]
requires-python = ">=3.12,<4"

[project.optional-dependencies]
# Core Azure integration
azure = ["azure-ai-agents>=1.2.0b5,<2.0", "azure-identity>=1.25.1,<2.0"]

# Memory and persistence features
memory = ["agent-framework-mem0", "mem0ai==1.0.0"]

# UI and interactive features
ui = ["agent-framework-devui", "rich>=14.2.0", "prompt-toolkit>=3.0.47,<4.0"]

# Evaluation and testing
evaluation = ["azure-ai-evaluation>=1.12.0,<2.0"]

# Complete installation with all features
all = ["agentic-fleet[azure,memory,ui,evaluation]"]

[project.scripts]
agentic-fleet = "agentic_fleet.cli.console:app"
fleet = "agentic_fleet.cli.console:app"
dynamic-fleet = "agentic_fleet.cli.console:app"
workflow = "agentic_fleet.cli.console:app"


[project.urls]
Homepage = "https://github.com/Qredence/agentic-fleet"
Documentation = "https://github.com/Qredence/agentic-fleet/docs"
Repository = "https://github.com/Qredence/agentic-fleet"
Issues = "https://github.com/Qredence/agentic-fleet/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_fleet"]
only-include = ["src/agentic_fleet"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/LICENSE",
    "/README.md",
    "/docs/AGENTS.md",
    "/pyproject.toml",
]
exclude = ["/.github", "/var", "/logs", "/__pycache__", "*.pyc"]


# Development dependencies (uv's preferred format)
[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=6.0.0",
    "debugpy>=1.8.17",
    "pre-commit>=3.5.0",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.31.0",
    "types-aiofiles>=25.1.0.20251011",
    "ruff>=0.14.6",
    "ty>=0.0.1a27",
]

[tool.uv.sources]
"agent-framework-core" = { git = "https://github.com/microsoft/agent-framework.git", branch = "main", subdirectory = "python/packages/core" }
"agent-framework-azure-ai" = { git = "https://github.com/microsoft/agent-framework.git", branch = "main", subdirectory = "python/packages/azure-ai" }
"agent-framework-a2a" = { git = "https://github.com/microsoft/agent-framework.git", branch = "main", subdirectory = "python/packages/a2a" }
"agent-framework-copilotstudio" = { git = "https://github.com/microsoft/agent-framework.git", branch = "main", subdirectory = "python/packages/copilotstudio" }
"agent-framework-mem0" = { git = "https://github.com/microsoft/agent-framework.git", branch = "main", subdirectory = "python/packages/mem0" }
"agent-framework-devui" = { git = "https://github.com/microsoft/agent-framework.git", branch = "main", subdirectory = "python/packages/devui" }


[tool.ruff]
src = ["src"]
target-version = "py312"
line-length = 100
extend-exclude = ["*.ipynb"]


[tool.ruff.lint]
# Add "W" (pycodestyle warnings), "C90" (mccabe complexity), "I" (isort), "B" (bugbear)
# "UP" (pyupgrade), "N" (pep8-naming), "SIM" (flake8-simplify), "A" (flake8-builtins)
select = [
    "E",
    "F",
    "W",   # Standard Flake8 (Error, Pyflakes, Warning)
    "C90", # McCabe complexity
    "I",   # isort
    "UP",  # pyupgrade (modernize python syntax)
    "B",   # flake8-bugbear (common bugs)
    "N",   # pep8-naming
    "A",   # flake8-builtins
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
    "PT",  # flake8-pytest-style (since you use pytest)
    "ARG", # flake8-unused-arguments
    "C4",  # flake8-comprehensions
    # Docstring rules (missing docstrings only)
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
]
ignore = [
    "E501",
    "C901", # Ignore complex functions for existing code
] # Ignore line length (let formatter handle it, or strictly enforce if you prefer)

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"notebooks/*.ipynb" = ["A002", "E402"]
"src/agentic_fleet/console.py" = ["B008"]
"src/agentic_fleet/api/routes/chat.py" = ["B008"]
"src/agentic_fleet/api/error_handlers.py" = ["ARG001"]
"src/agentic_fleet/api/main.py" = ["ARG001"]
"src/agentic_fleet/dspy_modules/*" = ["ARG002"]
"src/agentic_fleet/tools/*" = ["ARG002"]
"src/agentic_fleet/utils/*" = ["ARG001"]
"src/agentic_fleet/workflows/*" = ["ARG001"]
"tests/*" = [
    "ARG", # Allow unused arguments in tests (fixtures, mocks)
    "D",   # Ignore docstring rules in tests
]
"examples/*" = ["D"] # Ignore docstring rules in examples
"scripts/*" = ["D"] # Ignore docstring rules in scripts

[tool.ruff.lint.isort]
known-first-party = ["agentic_fleet", "agenticfleet"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]


[tool.coverage.run]
source = ["src/agentic_fleet", "src/agenticfleet"]
omit = ["*/tests/*", "*/__pycache__/*", "*/.venv/*"]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ty]
# ty will automatically discover your project structure and venv.
# You can add specific type checking rules or suppressions here.
# For now, the defaults are usually sufficient for a "best practice" start.
