# ============================================================================
# Project Metadata (PEP 621)
# See: https://packaging.python.org/en/latest/specifications/pyproject-toml/
# ============================================================================

[project]
name = "agentic-fleet"
version = "0.7.1"
description = "Multi-agent orchestration system built with Microsoft Agent Framework's Magentic Fleet pattern"
authors = [{ name = "Qredence", email = "contact@qredence.ai" }]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["agents", "ai", "magentic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]

dependencies = [
    # ── Core Agent Framework ──────────────────────────────────────────────────
    "agent-framework==1.0.0b251223",
    "agent-framework-core==1.0.0b251223",
    "agent-framework-azure-ai==1.0.0b251223",
    "agent-framework-azure-ai-search==1.0.0b251223",
    # ── Azure SDK ─────────────────────────────────────────────────────────────
    "azure-ai-agents==1.2.0b5",
    "azure-ai-evaluation>=1.12.0,<2.0",
    "azure-ai-projects==2.0.0b2",
    "azure-cosmos==4.14.3",
    "azure-identity>=1.25.1,<2.0",
    "azure-search-documents>=11.6.0",
    # ── Observability & Tracing ───────────────────────────────────────────────
    "azure-monitor-opentelemetry>=1.8.3",
    "azure-monitor-opentelemetry-exporter>=1.0.0b46",
    "opentelemetry-exporter-otlp-proto-http>=1.39.0",
    "openinference-instrumentation==0.1.42",
    "openinference-instrumentation-dspy==0.1.32",
    "langfuse>=3.11.2,<4.0",
    "prometheus-client>=0.16.0",
    "prometheus-fastapi-instrumentator>=6.1.0",
    # ── Web Framework ─────────────────────────────────────────────────────────
    "fastapi[standard]>=0.120.1,<1.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.24.0",
    "aiohttp>=3.9.0",
    "websockets>=10.4",
    # ── Database & Storage ────────────────────────────────────────────────────
    "databases[asyncpg]>=0.7.0,<1.0",
    "aiosqlite>=0.20.0",
    "sqlalchemy>=2.0.44",
    "psycopg2-binary>=2.9.11",
    "chromadb>=1.4.0",
    # ── DSPy & AI ─────────────────────────────────────────────────────────────
    "dspy>=3.0.4",
    "gepa[dspy]>=0.0.17,<1.0",
    "openai>=2.5.1",
    "litellm>=1.7.3,<2.0",
    "tiktoken>=0.12.0,<1.0",
    "tavily-python>=0.7.12",
    "mlflow>=3.8.1",
    "mcp>=1.21.0",
    "playwright>=1.40.0",
    # ── Data & Validation ─────────────────────────────────────────────────────
    "pydantic>=2.12.5,<3.0",
    "pydantic-settings>=2.3.2,<3.0",
    "pyyaml>=6.0.3,<7.0",
    "python-dotenv>=1.2.1,<2.0",
    "python-json-logger>=2.0.7",
    # ── CLI & TUI ─────────────────────────────────────────────────────────────
    "typer>=0.21.0,<0.22.0",
    "rich>=14.2.0",
    "prompt-toolkit>=3.0.47,<4.0",
    "textual>=6.5.0",
    "click>=8.1.0",
    # ── Async & Concurrency ───────────────────────────────────────────────────
    "anyio>=4.11.0,<5.0",
    "asyncer>=0.0.8,<1.0",
    "aiofiles>=25.1.0,<26.0",
    "tenacity>=8.2.3",
    "aiomqtt>=1.0.0",
    # ── Serialization & Utilities ─────────────────────────────────────────────
    "dill>=0.3.8",
    "requests>=2.28.0",
    "psutil>=5.9.0",
    "statsd>=3.3.0",
    "pytz>=2024.1",
    "setuptools>=80.9.0",
    # ── Data Science (consider moving to [viz] extra) ─────────────────────────
    "pandas>=1.5.0",
    "numpy>=2.4.0",
    "scipy>=1.9.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.11.0",
    "plotly>=5.10.0",
    # ── Jupyter ───────────────────────────────────────────────────────────────
    "ipykernel>=7.0.1,<8.0",
]
requires-python = ">=3.12,<4"

# ============================================================================
# Optional Dependencies (Extras)
# Install with: pip install agentic-fleet[azure] or uv add agentic-fleet[all]
# ============================================================================

[project.optional-dependencies]
# Core Azure integration
azure = [
    "azure-ai-agents==1.2.0b5",
    "azure-identity>=1.25.1,<2.0",
    "azure-ai-projects==2.0.0b2",
]

# UI and interactive features
ui = [
    "agent-framework-devui==1.0.0b251223",
    "rich>=14.2.0",
    "prompt-toolkit>=3.0.47,<4.0",
]

# Optional Agent Framework integrations
a2a = ["agent-framework-a2a==1.0.0b251223"]
declarative = ["agent-framework-declarative==1.0.0b251223"]
azurefunctions = ["agent-framework-azurefunctions==1.0.0b251223"]
ollama = ["agent-framework-ollama==1.0.0b251223", "ollama>=0.6.1"]

# Evaluation and testing
evaluation = ["azure-ai-evaluation>=1.12.0,<2.0"]

# Azure Monitor / AI Foundry tracing export
tracing = ["azure-monitor-opentelemetry>=1.6.0"]

# Complete installation with all features
all = ["agentic-fleet[azure,ui,evaluation,tracing,ollama]"]

[project.scripts]
agentic-fleet = "agentic_fleet.cli.console:app"
agenticfleet = "agentic_fleet.cli.console:app"
fleet = "agentic_fleet.cli.console:app"


[project.urls]
Homepage = "https://github.com/Qredence/agentic-fleet"
Documentation = "https://github.com/Qredence/agentic-fleet/docs"
Repository = "https://github.com/Qredence/agentic-fleet"
Issues = "https://github.com/Qredence/agentic-fleet/issues"

# ============================================================================
# Build System (Hatchling)
# See: https://hatch.pypa.io/latest/config/build/
# ============================================================================

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_fleet"]
only-include = ["src/agentic_fleet"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/LICENSE",
    "/README.md",
    "/docs/AGENTS.md",
    "/pyproject.toml",
]
exclude = [
    "/.github",
    "/var",
    "/logs",
    "/__pycache__",
    "*.pyc",
    "*.pyo",
    ".coverage",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "*.egg-info",
]


# ============================================================================
# Dependency Groups (PEP 735)
# Use: uv sync --group <name> or uv sync (installs default-groups)
# See: https://docs.astral.sh/uv/concepts/projects/dependencies/
# ============================================================================

[dependency-groups]
# Core development tools (installed by default)
dev = [
    # Testing
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.5.0",        # Parallel test execution
    # Linting & Formatting
    "ruff>=0.14.6",
    # Type Checking
    "ty>=0.0.8",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.31.0",
    "types-aiofiles>=25.1.0.20251011",
    # Pre-commit hooks
    "pre-commit>=3.5.0",
    # Debugging
    "debugpy>=1.8.17",
    # Security
    "bandit>=1.9.2",
]

# Load testing tools (optional, install with: uv sync --group load-test)
load-test = ["locust>=2.15.0"]

# Documentation tools (optional, install with: uv sync --group docs)
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

# ============================================================================
# uv Configuration
# See: https://docs.astral.sh/uv/reference/settings/
# ============================================================================

[tool.uv]
# Enforce minimum uv version for reproducibility
required-version = ">=0.8.0"

# Prefer uv-managed Python installations over system Python
python-preference = "managed"

# Allow pre-release versions globally.
# This repo intentionally pins and depends on multiple preview/beta packages
# (Agent Framework train, Azure AI Projects/Agents, Azure SDK previews).
prerelease = "allow"

# Default version specifier style when adding dependencies
add-bounds = "lower"

# Limit resolution to supported platforms (macOS and Linux only)
# This speeds up resolution and avoids Windows-specific issues
environments = ["sys_platform == 'darwin'", "sys_platform == 'linux'"]

# Install dev group by default during development
default-groups = ["dev"]

# Compile bytecode for faster startup (good for CLI tools)
compile-bytecode = true

# Use first-match index strategy for faster resolution
index-strategy = "first-index"

# Cache invalidation keys - rebuild when these files change
cache-keys = [
    { file = "pyproject.toml" },
    { file = "uv.lock" },
]

# ============================================================================
# Ruff Configuration (Linter & Formatter)
# See: https://docs.astral.sh/ruff/settings/
# ============================================================================

[tool.ruff]
src = ["src"]
target-version = "py312"
line-length = 100
extend-exclude = ["*.ipynb"]


[tool.ruff.lint]
# Add "W" (pycodestyle warnings), "C90" (mccabe complexity), "I" (isort), "B" (bugbear)
# "UP" (pyupgrade), "N" (pep8-naming), "SIM" (flake8-simplify), "A" (flake8-builtins)
select = [
    "E",
    "F",
    "W",   # Standard Flake8 (Error, Pyflakes, Warning)
    "C90", # McCabe complexity
    "I",   # isort
    "UP",  # pyupgrade (modernize python syntax)
    "B",   # flake8-bugbear (common bugs)
    "N",   # pep8-naming
    "A",   # flake8-builtins
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
    "PT",  # flake8-pytest-style (since you use pytest)
    "ARG", # flake8-unused-arguments
    "C4",  # flake8-comprehensions
    # Docstring rules (missing docstrings only)
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
]
ignore = [
    "E501",
    "C901", # Ignore complex functions for existing code
] # Ignore line length (let formatter handle it, or strictly enforce if you prefer)

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"notebooks/*.ipynb" = ["A002", "E402"]
"src/agentic_fleet/cli/console.py" = ["B008"]
"src/agentic_fleet/dspy_modules/*" = ["ARG002"]
"src/agentic_fleet/tools/*" = ["ARG002"]
"src/agentic_fleet/utils/*" = ["ARG001"]
"src/agentic_fleet/workflows/*" = ["ARG001"]
"tests/*" = [
    "ARG", # Allow unused arguments in tests (fixtures, mocks)
    "D",   # Ignore docstring rules in tests
]
"examples/*" = ["D"] # Ignore docstring rules in examples
"scripts/*" = ["D"] # Ignore docstring rules in scripts

[tool.ruff.lint.isort]
known-first-party = ["agentic_fleet"]

# ============================================================================
# Pytest Configuration
# See: https://docs.pytest.org/en/stable/reference/customize.html
# ============================================================================

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"  # Keep event loop alive for LiteLLM cleanup
addopts = "-m 'not e2e'"
markers = [
    "e2e: End-to-end tests requiring a running server (deselect with '-m \"not e2e\"')",
]


# ============================================================================
# Coverage Configuration
# See: https://coverage.readthedocs.io/en/latest/config.html
# ============================================================================

[tool.coverage.run]
source = ["src/agentic_fleet"]
omit = ["*/tests/*", "*/__pycache__/*", "*/.venv/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

# ============================================================================
# Type Checker Configuration (ty)
# See: https://github.com/astral-sh/ty
# ============================================================================

[tool.ty]
# ty will automatically discover your project structure and venv.
# You can add specific type checking rules or suppressions here.
# For now, the defaults are usually sufficient for a "best practice" start.
